# personal-finance-widget-dash

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  SECURITY.md  USAGE.md  index.html  tailwind.config.ts
api/: .env.example  IMPLEMENTATION_NOTES.md  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py
api/app/: __init__.py  categorize.py  config.py  db.py  deps.py  main.py  models.py  rules.py  schemas.py
api/app/routers/: __init__.py  alerts.py  categorize.py  ingest.py  reports.py
api/app/services/: __init__.py  anomalies.py  receipts.py  vendor_normalize.py
api/app/static/: app.js  styles.css
api/app/templates/: base.html  dashboard.html  reports.html
api/tests/: README.md  __init__.py  conftest.py  test_anomalies.py  test_categorize.py  test_ingest.py  test_reports.py  test_rules.py
n8n/: README.md
n8n/workflows/: drive_ingest.json  weekly_report.json
ops/: .env.example  DEPLOYMENT_SUMMARY.md  Dockerfile  Makefile  README.md  docker-compose.yml  healthcheck.sh  nginx.conf
seed/: seed_rules.sql  seed_vendors.sql
src/: App.tsx
src/components/: AddExpenseForm.tsx  AvailableMoneyWidget.tsx  DarkModeToggle.tsx  DashboardContent.tsx  IncomeChart.tsx  MetricCard.tsx  MetricsGrid.tsx  SubscriptionsList.tsx
src/integrations/supabase/: client.ts  types.ts
src/lib/: supabase.ts
src/pages/: Index.tsx
supabase/: config.toml
supabase/functions/expenses/: index.ts
supabase/functions/income/: index.ts
